[project]
name = "unnet"
version = "0.1.0"
description = "Micro Neural Network - Educational proof-of-concept for learning neural networks and automatic differentiation"
requires-python = ">=3.11"
dependencies = [
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pre-commit",
    "jupyter",
]

[tool.black]
revision = "main"
diff = true
check = true
isort = true
skip_string_normalization = true
log_level = "INFO"
line_length = 120

