[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unnet"
version = "0.1.0"
description = "Micro Neural Network - Educational proof-of-concept for learning neural networks and automatic differentiation"
requires-python = ">=3.11"
dependencies = [
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "jupyter",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

